lab1/Test/L1-A-11-21.cmm
struct {
};
int ;
int l_OP5E26_y ( struct mdy0yr_aTLg dVefJdGqkGX ) 
  {
  float Lhpe = lqRMgh ;
  if ( MubezUyeeQ8EwxodH )   while ( _VaTR )   return 
    Lk2Du_WbFQBcJsYNh9tL ;

else   if ( I1ZzvKY4B1rfsITB )   HFgADklTJfbPezJIg 
    = fh || a8fg - kLosfPmyHWd1y3Wy * Vc98c [ WxrP = Nq4D8gMOo2bw100y 
    && X0SoAxqhxQivJP <= ! Z8na0quR6 ( z4qXizK && HNUX 
    != ( ZAyvK5 && WMDg7dxy9Ps2F0 < jMF7H0 [ dvrLsSMl 
    = oD_cilHbA09 > kvVYcqUg * ( c7uUI8eH90nRz7 >= P0u4cfTYq3_I 
    [ McEJU5 && AAi0dwGsJubyY < nBtrpI3 - - ebdZ9QBEKyD5s 
    ( WuHWGbSzx , m9 ) . HzZgVglPduHuDDyNvGXX >= FeX_Q9RJhS0k 
    ] ) / RwCFLRSL91orNdkhr8 ] ) == - 969793618 . pEzKncXRS 
    + - 1155961281.1411972933 . n676Xd9LJV2t8EjV / UXNx2aBE6yob 
    ( ) ) / ! - vMYHkG ] ;


}
int ur22QQNn0icly 647275507 ] , E 

;
int HFMry54Tx ( ) {
{
    int tVTXY ;
    int qjoLJrHY ;
    struct {
      struct SpI_Gam9dXRpwDZE1u {
      }EXpNIf5 ;
      int mq_4OaKH ;
      int RP8Qb9 ;
    }k , qi0L96hBDvxQT ;
    if ( Qbj80_OyYmD8zy )     m10xdpxa5WhHG0oA ;
else     while ( GD2tY_dKtqKq )     GltJvM1pB ;


1179156865.1994599069   }}
int ;
int ;
int Lb4dN4yVU5hNcgoG ( int zbNEUaWKSTT00XV , int cElaYeYeYyXBFMbgeQZl 
  ) {
}
